test/cts/negative/import_duplicate_target.wesl
import _import_lib;
import _import_lib as other;

@compute @workgroup_size(1, 1, 1)
fn main(@builtin(global_invocation_id) gid: vec3<u32>) {
  let _ = gid.x;
}
